src/test/compile-fail/bad-env-capture.rs
// error-pattern: attempted dynamic environment-capture
fn foo() {
    let x: int;
    fn bar() { log_full(core::debug, x); }
}
fn main() { foo(); }
